--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/adam-cowley/vue-neo4j.git"
+    "url": "git+https://github.com/Merifond/vue-neo4j.git"
   },
   "keywords": [
     "neo4j",
